--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.MyApplication">
-        <activity android:name=".UiTesting"></activity>
+        <activity android:name=".LinearLayoutTesting"></activity>
+        <activity android:name=".UiTesting" />
         <activity android:name=".MessageActivity" />
         <activity android:name=".MainActivity">
             <intent-filter>
