--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.MyApplication">
-        <activity android:name=".SecondActivity"></activity>
+        <activity android:name=".ListViewActivity"></activity>
+        <activity android:name=".SecondActivity" />
         <activity android:name=".LoggedActivity" />
         <activity android:name=".CalculatorActivity" />
         <activity android:name=".LinearLayoutTesting" />
