--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,7 +11,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.MyApplication">
-        <activity android:name=".DatabaseActivity"></activity>
+        <activity android:name=".UserActivity"></activity>
+        <activity android:name=".DatabaseActivity" />
         <activity android:name=".SettingsActivity" />
         <activity android:name=".DetailActivity" />
         <activity android:name=".ListViewActivity" />
