--- a/app/build.gradle
+++ b/app/build.gradle
@@ -39,4 +39,5 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
     implementation "androidx.fragment:fragment:1.2.5"
     implementation "androidx.preference:preference:1.1.1"
+    implementation "com.google.android.material:material:1.3.0-beta01"
 }
