--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,6 +11,11 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.MyApplication">
+        <service
+            android:name=".MediaService"
+            android:enabled="true"
+            android:exported="true" >
+        </service>
         <activity android:name=".UserActivity"></activity>
         <activity android:name=".DatabaseActivity" />
         <activity android:name=".SettingsActivity" />
