--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,6 +3,7 @@
     package="com.example.myapplication">
 
     <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.READ_CONTACTS"  />
 
     <application
         android:allowBackup="true"
@@ -11,12 +12,14 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.MyApplication">
+        <activity android:name=".ContentViewActivity"></activity>
+
         <service
             android:name=".MediaService"
             android:enabled="true"
-            android:exported="true" >
-        </service>
-        <activity android:name=".UserActivity"></activity>
+            android:exported="true"></service>
+
+        <activity android:name=".UserActivity" />
         <activity android:name=".DatabaseActivity" />
         <activity android:name=".SettingsActivity" />
         <activity android:name=".DetailActivity" />
