--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -39,6 +39,11 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
+        <provider
+            android:authorities="com.example.friendsprovider"
+            android:name="com.example.myapplication.AppProvider"
+            android:exported="false"/>
     </application>
 
 </manifest>
